infrastructure/kubernetes/app/seaweedfs-manifests/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: seaweedfs-admin
    namespace: seaweedfs
spec:
    parentRefs:
        - name: traefik
          namespace: default
          group: gateway.networking.k8s.io
          kind: Gateway
          sectionName: https
    hostnames:
        - seaweedfs-admin.lan
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          filters:
              - type: ExtensionRef
                extensionRef:
                    group: traefik.io
                    kind: Middleware
                    name: oauth2-proxy-auth
          backendRefs:
              - name: seaweedfs-admin
                port: 23646
                group: ""
                kind: Service
                weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: seaweedfs-filer
    namespace: seaweedfs
spec:
    parentRefs:
        - name: traefik
          namespace: default
          group: gateway.networking.k8s.io
          kind: Gateway
          sectionName: https
    hostnames:
        - seaweedfs.lan
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          filters:
              - type: ExtensionRef
                extensionRef:
                    group: traefik.io
                    kind: Middleware
                    name: oauth2-proxy-auth
          backendRefs:
              - name: seaweedfs-filer
                port: 8888
                group: ""
                kind: Service
                weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: seaweedfs-s3
    namespace: seaweedfs
spec:
    parentRefs:
        - name: traefik
          namespace: default
          group: gateway.networking.k8s.io
          kind: Gateway
          sectionName: https
    hostnames:
        - s3.lan
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: seaweedfs-filer
                port: 8333
                group: ""
                kind: Service
                weight: 1
